# research-crew

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  import_from_gaf.py  pyproject.toml  start-tunnel.sh
src/research_crew/: __init__.py  crew.py  main.py
src/research_crew/config/: agents.yaml  tasks.yaml
